--- a/package.json
+++ b/package.json
@@ -11,5 +11,10 @@
   "devDependencies": {
     "webpack": "^3.12.0",
     "webpack-dev-server": "^3.1.9"
+  },
+  "dependencies": {
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2",
+    "react-router-dom": "^4.3.1"
   }
 }
