add the plugin in the babel file

--- a/.babelrc
+++ b/.babelrc
@@ -9,7 +9,12 @@
                 ]
             }
         }
-    ],
+        ],
     "react"
+    ],
+    "plugins":
+    [
+        "syntax-dynamic-import"
     ]
+
 }
